--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="./assets/images/logo.png" alt="soulful-logo" />
       </div>
       <div
-        class="d-flex align-items-center justify-content-between nav-containers"
+        class="d-none d-md-flex align-items-center justify-content-between nav-containers"
       >
         <p class="nav-item mb-0 font-weight-bold">Our Home Cooks</p>
         <div class="nav-item">
@@ -48,7 +48,7 @@
       class="hero-section px-3 px-md-5 d-flex align-items-center justify-content-between"
     >
       <div class="">
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="d-block d-md-flex align-items-center justify-content-between">
           <div class="hero-first-wrapper">
             <div>
               <h3 class="mb-4 hero-text">
@@ -62,10 +62,10 @@
               </div>
             </div>
           </div>
-          <div class="hero-second-wrapper">
+          <div class="hero-second-wrapper ">
             <div class="positon-relative">
-              <div class="position-relative food-img-wrapper">
-                <img src="./assets/images/hero.png" alt="hero" />
+              <div class="position-relative food-img-wrapper hero-img-wrapper mx-4 mx-md-0">
+                <img src="./assets/images/hero.png" alt="hero" class="hero-img " />
                 <div class="hero-img-attach-2 position-absolute">
                   <img src="./assets/images/hero2.svg" alt="hero" />
                 </div>
@@ -91,10 +91,10 @@
     <section class="feature-section py-md-5 py-3 px-3 px-md-5">
       <div class="px-5">
         <div>
-          <h5 class="text-center section-title mb-5">Why Soulful Kitchen?</h5>
+          <h5 class="text-center section-title mb-sm-2 mb-5">Why Soulful Kitchen?</h5>
         </div>
         <div class="row gx-4 gy-3 mb-5">
-          <div class="col">
+          <div class=" col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -107,7 +107,7 @@
               </p>
             </div>
           </div>
-          <div class="col">
+          <div class=" col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -120,7 +120,7 @@
               </p>
             </div>
           </div>
-          <div class="col">
+          <div class=" col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -133,7 +133,7 @@
               </p>
             </div>
           </div>
-          <div class="col">
+          <div class=" col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -161,7 +161,7 @@
         class="pb-2 px-5 d-flex align-items-center justify-content-center pt-2"
       >
         <div
-          class="options-wrapper d-flex align-items-center justify-content-center"
+          class="options-wrapper d-none d-md-flex align-items-center justify-content-center"
         >
           <p class="select-option active">Caribbean Food</p>
           <p class="select-option">West African Food</p>
@@ -172,25 +172,25 @@
       </div>
       <div class="mt-3 mb-4">
         <div class="row gy-3">
-          <div class="col col-xs-12 col-md-3" xs="12" md="3">
+          <div class=" col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p1.png" alt="food" class="food-img" />
               <p class="food-name">Nigerian Puff Puff</p>
             </div>
           </div>
-          <div class="col col-xs-12 col-md-3" xs="12" md="3">
+          <div class=" col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p2.png" alt="food" class="food-img" />
               <p class="food-name">Jollof Rice</p>
             </div>
           </div>
-          <div class="col col-xs-12 col-md-3" xs="12" md="3">
+          <div class=" col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p3.png" alt="food" class="food-img" />
               <p class="food-name">OrStraw Cocktail</p>
             </div>
           </div>
-          <div class="col col-xs-12 col-md-3" xs="12" md="3">
+          <div class=" col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p4.png" alt="food" class="food-img" />
               <p class="food-name">Chicken Fried Rice</p>
@@ -280,10 +280,10 @@
 
       <div class="mt-3 mb-4">
         <div
-          class="d-flex align-items-center justify-content-between recipe-flex-gap"
+          class="d-block d-md-flex align-items-center justify-content-between recipe-flex-gap"
         >
           <div
-            class="d-flex align-items-center flex-column g-3 recipe-flex-gap"
+            class="d-block d-md-flex align-items-center flex-column g-3 recipe-flex-gap"
           >
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p1.png" alt="food" />
@@ -305,7 +305,7 @@
             </div>
           </div>
           <div
-            class="d-flex align-items-center flex-column g-3 recipe-flex-gap"
+            class="d-block d-md-flex align-items-center flex-column g-3 recipe-flex-gap"
           >
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p3.png" alt="food" />
@@ -324,7 +324,7 @@
 
     <!---section-->
     <section class="picked-recipe-section pt-3 pb-4 px-md-5 px-3">
-      <div class="d-flex align-items-center justify-content-center">
+      <div class="d-block d-md-flex align-items-center justify-content-center">
         <h3 class="section-title mb-3 w-100 text-center">
           Recipes Picked For You
         </h3>
@@ -374,9 +374,9 @@
 
     <!---section-->
     <section class="soulfil-pro-section py-5 px-md-5 px-3">
-      <div class="pro-section-card d-flex align-items-center">
-        <div>
-          <img src="./assets/images/pro.png" alt="pro" />
+      <div class="pro-section-card d-block d-md-flex align-items-center px-4 py-3 px-md-0 py-md-0">
+        <div class="d-none d-md-block">
+          <img src="./assets/images/pro.png" alt="pro" class="pro-section-img" />
         </div>
         <div class="pro-right-container">
           <h3 class="kitchen-pro-text mb-2">
@@ -402,7 +402,7 @@
 
     <footer class="pt-5 pb-1 px-md-5 px-3">
       <div class="row gy-3 gx-5">
-        <div class="col col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-4">
           <div class="mb-3">
             <img src="./assets/images/logo.png" />
           </div>
@@ -416,7 +416,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-4">
           <div class="px-0 px-md-5">
             <h3 class="footer-title">Quick Links</h3>
             <p class="footer-text">Soulful Kitchen PRO</p>
@@ -426,7 +426,7 @@
           </div>
         </div>
 
-        <div class="col col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-4">
           <div class="px-0 px-md-5">
             <h3 class="footer-title">Legal</h3>
             <p class="footer-text">Terms of Service</p>
