--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       class="hero-section px-3 px-md-5 d-flex align-items-center justify-content-between"
     >
       <div class="">
-        <div class="d-block d-md-flex align-items-center justify-content-between">
+        <div
+          class="d-block d-md-flex align-items-center justify-content-between"
+        >
           <div class="hero-first-wrapper">
             <div>
               <h3 class="mb-4 hero-text">
@@ -62,10 +64,16 @@
               </div>
             </div>
           </div>
-          <div class="hero-second-wrapper ">
+          <div class="hero-second-wrapper">
             <div class="positon-relative">
-              <div class="position-relative food-img-wrapper hero-img-wrapper mx-4 mx-md-0">
-                <img src="./assets/images/hero.png" alt="hero" class="hero-img " />
+              <div
+                class="position-relative food-img-wrapper hero-img-wrapper mx-4 mx-md-0"
+              >
+                <img
+                  src="./assets/images/hero.png"
+                  alt="hero"
+                  class="hero-img"
+                />
                 <div class="hero-img-attach-2 position-absolute">
                   <img src="./assets/images/hero2.svg" alt="hero" />
                 </div>
@@ -91,10 +99,12 @@
     <section class="feature-section py-md-5 py-3 px-3 px-md-5">
       <div class="px-5">
         <div>
-          <h5 class="text-center section-title mb-sm-2 mb-5">Why Soulful Kitchen?</h5>
+          <h5 class="text-center section-title mb-sm-2 mb-5">
+            Why Soulful Kitchen?
+          </h5>
         </div>
         <div class="row gx-4 gy-3 mb-5">
-          <div class=" col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -107,7 +117,7 @@
               </p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -120,7 +130,7 @@
               </p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -133,7 +143,7 @@
               </p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-3">
             <div class="text-center">
               <div class="w-100 text-center d-flex justify-content-center mb-3">
                 <div class="feature-icon-wrapper shadow">
@@ -158,10 +168,10 @@
         </h5>
       </div>
       <div
-        class="pb-2 px-5 d-flex align-items-center justify-content-center pt-2"
+        class="pb-md-2 pb-0 px-md-5 px-0 d-flex align-items-center justify-content-center pt-2"
       >
         <div
-          class="options-wrapper d-none d-md-flex align-items-center justify-content-center"
+          class="options-wrapper d-block d-md-flex align-items-center justify-content-center"
         >
           <p class="select-option active">Caribbean Food</p>
           <p class="select-option">West African Food</p>
@@ -172,25 +182,25 @@
       </div>
       <div class="mt-3 mb-4">
         <div class="row gy-3">
-          <div class=" col-sm-12 col-md-3" xs="12" md="3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p1.png" alt="food" class="food-img" />
               <p class="food-name">Nigerian Puff Puff</p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3" xs="12" md="3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p2.png" alt="food" class="food-img" />
               <p class="food-name">Jollof Rice</p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3" xs="12" md="3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p3.png" alt="food" class="food-img" />
               <p class="food-name">OrStraw Cocktail</p>
             </div>
           </div>
-          <div class=" col-sm-12 col-md-3" xs="12" md="3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
               <img src="./assets/images/p4.png" alt="food" class="food-img" />
               <p class="food-name">Chicken Fried Rice</p>
@@ -287,21 +297,18 @@
           >
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p1.png" alt="food" />
-                <p class="food-name">Nigerian Puff Puff</p>
-
+              <p class="food-name">Nigerian Puff Puff</p>
             </div>
 
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p4.png" alt="food" />
-                <p class="food-name">Pasta</p>
-
+              <p class="food-name">Pasta</p>
             </div>
           </div>
           <div class="w-100 h-100">
             <div class="full-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p2.png" alt="food" />
-                <p class="food-name">Chicken Biryani</p>
-
+              <p class="food-name">Chicken Biryani</p>
             </div>
           </div>
           <div
@@ -309,13 +316,11 @@
           >
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p3.png" alt="food" />
-                <p class="food-name">Chips</p>
-
+              <p class="food-name">Chips</p>
             </div>
             <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
               <img src="./assets/images/p4.png" alt="food" />
-                <p class="food-name">Prawn Spaghetti</p>
-
+              <p class="food-name">Prawn Spaghetti</p>
             </div>
           </div>
         </div>
@@ -374,9 +379,15 @@
 
     <!---section-->
     <section class="soulfil-pro-section py-5 px-md-5 px-3">
-      <div class="pro-section-card d-block d-md-flex align-items-center px-4 py-3 px-md-0 py-md-0">
+      <div
+        class="pro-section-card d-block d-md-flex align-items-center px-4 py-3 px-md-0 py-md-0"
+      >
         <div class="d-none d-md-block">
-          <img src="./assets/images/pro.png" alt="pro" class="pro-section-img" />
+          <img
+            src="./assets/images/pro.png"
+            alt="pro"
+            class="pro-section-img"
+          />
         </div>
         <div class="pro-right-container">
           <h3 class="kitchen-pro-text mb-2">
