--- a/index.html
+++ b/index.html
@@ -173,14 +173,18 @@
         <div
           class="options-wrapper d-block d-md-flex align-items-center justify-content-center"
         >
-          <p class="select-option active">Caribbean Food</p>
-          <p class="select-option">West African Food</p>
-          <p class="select-option">Breakfast</p>
-          <p class="select-option">Lunch</p>
-          <p class="select-option">Dinner</p>
+          <p class="select-option" onclick="showRecipe(event, 0)">
+            Caribbean Food
+          </p>
+          <p class="select-option" onclick="showRecipe(event, 1)">
+            West African Food
+          </p>
+          <p class="select-option" onclick="showRecipe(event, 2)">Breakfast</p>
+          <p class="select-option" onclick="showRecipe(event, 3)">Lunch</p>
+          <p class="select-option" onclick="showRecipe(event, 4)">Dinner</p>
         </div>
       </div>
-      <div class="mt-3 mb-4">
+      <div class="mt-3 mb-4 recipe-options">
         <div class="row gy-3">
           <div class="col-sm-12 col-md-3" xs="12" md="3">
             <div class="food-img-wrapper">
@@ -208,6 +212,120 @@
           </div>
         </div>
       </div>
+      <div class="mt-3 mb-4 recipe-options">
+        <div class="row gy-3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 mb-4 recipe-options">
+        <div class="row gy-3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" class="food-img" />
+              <p class="food-name">Nigerian Puff Puff</p>
+            </div>
+          </div>
+
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 mb-4 recipe-options">
+        <div class="row gy-3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" class="food-img" />
+              <p class="food-name">Nigerian Puff Puff</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 mb-4 recipe-options">
+        <div class="row gy-3">
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" class="food-img" />
+              <p class="food-name">Nigerian Puff Puff</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" xs="12" md="3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="d-flex justify-content-center">
         <button class="search-more-btn mt-3">Search more</button>
       </div>
@@ -229,18 +347,20 @@
         <div class="d-flex align-items-center justify-content-end">
           <div
             class="arrow-icon-wrapper white_icon d-flex justify-content-center align-items-center left-arrow"
+            onclick="handleRecipeChange('trending-recipes','decrement')"
           >
             <img src="./assets/images/white_left.svg" alt="'icon" />
           </div>
           <div
             class="arrow-icon-wrapper white_icon d-flex justify-content-center align-items-center"
+            onclick="handleRecipeChange('trending-recipes','increment')"
           >
             <img src="./assets/images/white_right.svg" alt="'icon" />
           </div>
         </div>
       </div>
 
-      <div class="mt-3 mb-4">
+      <div class="mt-3 mb-4 trending-recipes">
         <div class="row gy-3">
           <div xs="12" md="3" class="col col-12 col-md-3">
             <div class="food-img-wrapper">
@@ -268,6 +388,36 @@
           </div>
         </div>
       </div>
+
+      <div class="mt-3 mb-4 trending-recipes">
+        <div class="row gy-3">
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">ollof Rice</p>
+            </div>
+          </div>
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" class="food-img" />
+              <p class="food-name">Nigerian Puff Puff</p>
+            </div>
+          </div>
+
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!---section-->
@@ -277,18 +427,20 @@
         <div class="d-flex align-items-center justify-content-between">
           <div
             class="arrow-icon-wrapper d-flex justify-content-center align-items-center left-arrow"
+            onclick="handleRecipeChange('latest-recipes','decrement')"
           >
             <img src="./assets/images/left.svg" alt="'icon" />
           </div>
           <div
             class="arrow-icon-wrapper d-flex justify-content-center align-items-center"
+            onclick="handleRecipeChange('latest-recipes','increment')"
           >
             <img src="./assets/images/right.svg" alt="'icon" />
           </div>
         </div>
       </div>
 
-      <div class="mt-3 mb-4">
+      <div class="mt-3 mb-4 latest-recipes">
         <div
           class="d-block d-md-flex align-items-center justify-content-between recipe-flex-gap"
         >
@@ -325,6 +477,43 @@
           </div>
         </div>
       </div>
+      <div class="mt-3 mb-4 latest-recipes">
+        <div
+          class="d-block d-md-flex align-items-center justify-content-between recipe-flex-gap"
+        >
+          <div
+            class="d-block d-md-flex align-items-center flex-column g-3 recipe-flex-gap"
+          >
+            <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" />
+              <p class="food-name">Nigerian Puff Puff</p>
+            </div>
+
+            <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" />
+              <p class="food-name">Chicken Biryani</p>
+            </div>
+          </div>
+          <div class="w-100 h-100">
+            <div class="full-recipe food-img-wrapper" class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" />
+              <p class="food-name">Pasta</p>
+            </div>
+          </div>
+          <div
+            class="d-block d-md-flex align-items-center flex-column g-3 recipe-flex-gap"
+          >
+            <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" />
+              <p class="food-name">Chips</p>
+            </div>
+            <div class="half-recipe food-img-wrapper" class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" />
+              <p class="food-name">Prawn Spaghetti</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!---section-->
@@ -336,18 +525,20 @@
         <div class="d-flex align-items-center justify-content-end float-right">
           <div
             class="arrow-icon-wrapper d-flex justify-content-center align-items-center left-arrow"
+            onclick="handleRecipeChange('picked-recipes','decrement')"
           >
             <img src="./assets/images/left.svg" alt="'icon" />
           </div>
           <div
             class="arrow-icon-wrapper d-flex justify-content-center align-items-center"
+            onclick="handleRecipeChange('picked-recipes','increment')"
           >
             <img src="./assets/images/right.svg" alt="'icon" />
           </div>
         </div>
       </div>
 
-      <div class="mt-3 mb-4">
+      <div class="mt-3 mb-4 picked-recipes">
         <div class="row gy-3">
           <div xs="12" md="3" class="col col-12 col-md-3">
             <div class="food-img-wrapper">
@@ -359,6 +550,35 @@
             <div class="food-img-wrapper">
               <img src="./assets/images/p2.png" alt="food" class="food-img" />
               <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p3.png" alt="food" class="food-img" />
+              <p class="food-name">OrStraw Cocktail</p>
+            </div>
+          </div>
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p4.png" alt="food" class="food-img" />
+              <p class="food-name">Chicken Fried Rice</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-3 mb-4 picked-recipes">
+        <div class="row gy-3">
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p2.png" alt="food" class="food-img" />
+              <p class="food-name">Jollof Rice</p>
+            </div>
+          </div>
+          <div xs="12" md="3" class="col col-12 col-md-3">
+            <div class="food-img-wrapper">
+              <img src="./assets/images/p1.png" alt="food" class="food-img" />
+              <p class="food-name">Nigerian Puff Puff</p>
             </div>
           </div>
           <div xs="12" md="3" class="col col-12 col-md-3">
@@ -480,5 +700,6 @@
         </p>
       </div>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
